--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -12,6 +12,12 @@ run:
   env:
     - name: BUCKET_NAME
       value: believeinserverless
+    - name: CACHE_NAME
+      value: bis
+    - name: ENVIRONMENT
+      value: production
   secrets:
     - name: DISCORD_TOKEN
       value-from: discord
+    - name: MOMENTO_API_KEY
+      value-from: momento
