--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@aws-sdk/client-s3": "^3.654.0",
     "@gomomento/sdk": "^1.98.1",
     "discord.js": "^14.16.2",
-    "open-graph-scraper": "^6.8.2"
+    "open-graph-scraper": "^6.8.2",
+    "rss": "^1.2.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
