--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.654.0",
     "@gomomento/sdk": "^1.98.1",
     "discord.js": "^14.16.2",
+    "express": "^4.21.0",
     "open-graph-scraper": "^6.8.2",
     "rss": "^1.2.2"
   },
