adding rss emoji to accepted links

--- a/service/template.yaml
+++ b/service/template.yaml
@@ -39,6 +39,7 @@ Resources:
               Action:
                 - s3:GetObject
                 - s3:PutObject
+                - s3:PutObjectAcl
               Resource:
                 - !Sub ${RSSBucket.Arn}/*
             - Effect: Allow
