--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "discord.js": "^14.16.2",
     "express": "^4.21.0",
     "open-graph-scraper": "^6.8.2",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
